syntax = "proto3";

package github.com.igorlage.curso.fullcycle.desafio1;

option go_package = "protofiles/pb";


service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse) {};
    rpc FindProducts(FindProductsRequest) returns (FindProductsResponse) {};
    rpc FindProduct(FindProductRequest) returns (FindProductResponse) {};
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    float price = 3;
}

message Product {
    int32 id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}

message CreateProductResponse {
    Product product = 1;
}

message FindProductsRequest{

}

message FindProductRequest{
    string id = 1;
}

message FindProductsResponse{
   repeated Product products = 1;
}

message FindProductResponse{
    int32 id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}